# web-scrape-cli

./: README.md  cli.py  pyproject.toml  web_scraper.py
core/: utils.py
webscraper/: cli.py
webscraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
webscraper/core/: fetch.py  parse.py
